2004-05-16  Lassi A. Tuura  <lat@iki.fi>

	* igprof-analyse: Optionally demangle symbols.  Sanitise symbol
	and library names in HTML output.  Make sure all counters are
	always correctly tracked, including unknown counters specified on
	the command line.

2004-05-15  Lassi A. Tuura  <lat@iki.fi>

	* igprof-analyse: Take short options. Output text, html and xml.

	* test/test_load.cc: Reduce loop counts, we now do real locking
	so programs run much slower.

	* IgProf.cc, IgProfPerf.cc: Wise up.  The pthreads locking stuff
	does not work with asynchronous signals.  So make each thread keep
	its own tree roots so the (performance) profiling module can add
	add entries to private tree without interlocking threads.  For
	locks go back to regular pthreads mutexes, the are required so
	that concurrent lock attempts (e.g. calls to malloc in several
	threads simultaneously) continue to work.

	* igprof-analyse: Sort parents and callers too.

	* igprof-analyse: Improve by-caller sorting.

	* IgProf.cc: Counters are now large numbers.

	* igprof-analyse: Optionally output libraries.  Sort by caller.

42004-05-15  Lassi A. Tuura  <lat@iki.fi>

	* IgProf.cc, IgProfFileDesc.cc, IgProfMem.cc, IgProfPerf.cc:
	Remove unnecessary semi-colons.

	* IgProf.h, IgProfMacros.h: Split macros off to another header.
	Provide easier interface to registering hooks, provide trampolines
	directly and support dual hooks for binaries that have symbols in
	themselves in addition to being defined in system libraries.
	Heavy work on multi-thread profiling issues.  Add documentation.
	Include program name and process-id into the dump if possible.
	* IgProfFileDesc.cc: New hook definition scheme.  Document.
	* IgProfMem.cc: New hook definition scheme.  Document.
	* IgProfPerf.cc: New hook definition scheme.  Document.
	Heavy work on multi-threaded program profiling.
	* test/test_load.cc: New multi-threaded stress test.
	* src/.gdbinit: New.

2004-05-14  Lassi A. Tuura  <lat@iki.fi>
